--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,113 @@
+aiohttp==3.7.4.post0
+appdirs==1.4.4
+arabic-reshaper==2.1.3
 asgiref==3.4.1
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.9
-cryptography==36.0.1
+async-timeout==3.0.1
+attrs==21.2.0
+backports.entry-points-selectable==1.1.1
+bandit==1.7.0
+black==21.7b0
+boto3==1.18.9
+botocore==1.21.9
+cassandra-driver==3.25.0
+certifi==2021.5.30
+cffi==1.14.6
+chardet==4.0.0
+charset-normalizer==2.0.4
+click==8.0.1
+colorama==0.4.4
+cryptography==3.4.7
 Cython==0.29.23
 defusedxml==0.7.1
+distlib==0.3.4
 dj-database-url==0.5.0
-Django==4.0
-django-heroku==0.3.1
+Django==3.2.6
+django-admin-interface==0.16.3
+django-allauth==0.45.0
+django-auth==0.1.9
+django-background-tasks==1.2.5
+django-cassandra-engine==1.6.3
+django-ckeditor==6.1.0
+django-cockroachdb==3.2.1
+django-colorfield==0.4.2
+django-compat==1.0.15
+django-cors-headers==3.7.0
+django-environ==0.4.5
+django-flat-responsive==2.0
+django-flat-theme==1.1.4
+django-js-asset==1.2.2
+django-redirect-to-non-www==0.1.1
+django-rest-auth==0.9.5
+django-rest-framework==0.1.0
+django-richtextfield==1.6.1
 django-separatedvaluesfield==0.6.0
+django-storages==1.11.1
 django-utils-six==2.0
+django-xhtml2pdf==0.0.4
+djangorestframework==3.12.4
+filelock==3.4.0
+future==0.18.2
 gensim==4.1.2
-gunicorn==20.1.0
-idna==3.3
+geomet==0.2.1.post1
+gitdb==4.0.7
+GitPython==3.1.18
+google-play-scraper==1.0.0
+html5lib==1.1
+idna==3.2
+jmespath==0.10.0
 joblib==1.1.0
-numpy==1.21.5
+mccabe==0.6.1
+multidict==5.1.0
+mypy==0.910
+mypy-extensions==0.4.3
+mysql-connector-python==8.0.26
+numpy==1.21.4
 oauthlib==3.1.1
 pandas==1.3.5
-psycopg2==2.9.2
-pycparser==2.21
-PyJWT==2.3.0
+pathspec==0.9.0
+pbr==5.6.0
+Pillow==8.3.1
+platformdirs==2.4.0
+psycopg2==2.9.1
+pycodestyle==2.7.0
+pycparser==2.20
+pydocstyle==6.1.1
+pyflakes==2.3.1
+PyJWT==1.7.1
+pylama==7.7.1
+PyPDF2==1.26.0
+python-bidi==0.4.2
 python-dateutil==2.8.2
+python-dotenv==0.19.0
 python3-openid==3.2.0
-pytz==2021.3
+pytz==2021.1
+PyYAML==5.4.1
+regex==2021.8.3
+reportlab==3.5.68
 requests==2.26.0
 requests-oauthlib==1.3.0
+s3transfer==0.5.0
 scikit-learn==1.0.1
 scipy==1.7.3
+sib-api-v3-sdk==7.2.0
 six==1.16.0
 sklearn==0.0
 smart-open==5.2.1
-social-auth-app-django==5.0.0
+smmap==4.0.0
+snowballstemmer==2.1.0
+social-auth-app-django==4.0.0
 social-auth-core==4.1.0
-sqlparse==0.4.2
+sqlparse==0.4.1
+stevedore==3.3.0
+stripe==2.60.0
 threadpoolctl==3.0.0
-tzdata==2021.5
-urllib3==1.26.7
+toml==0.10.2
+tomli==1.2.1
+twilio==6.63.2
+typing-extensions==3.10.0.0
+urllib3==1.26.6
+virtualenv==20.10.0
+webencodings==0.5.1
 whitenoise==5.3.0
+xhtml2pdf==0.2.5
+yarl==1.6.3
